[package]
name = "lenovo-auto-keyboard-backlight"
version = "0.3.1"
edition = "2021"
build = "build.rs"

[dependencies]
wmi = "0.14.0"
rdev = "0.5.3"
serde = { version = "1.0.215", features = ["derive"] }
once_cell = "1.20.2"
tray-icon = "0.19.2"
image = "0.25.5"
tao = "0.31.0"

[build-dependencies]
embed-resource = "3.0.1"